tests/hevm/fail/redundant/redundant.act
constructor of A
interface constructor()

iff

  CALLVALUE == 0

creates

  uint x := 0

behaviour f of A
interface f()

iff

  CALLVALUE == 0
  x == 1

storage

  x => 2